--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt &&
       python manage.py migrate --no-input &&
+      python manage.py load_local_data --file local_database_backup.json || true &&
       python manage.py collectstatic --no-input
     startCommand: "gunicorn myshop.wsgi:application --timeout 30 --workers 2"
     envVars:
